--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,7 +1,5 @@
-# See: https://dart.dev/tools/pub/pubspec
 name: model_viewer_plus_example
-description: >-
-  Demonstrates how to use the ModelViewer widget.
+description: Demonstrates how to use the ModelViewer widget.
 homepage: https://github.com/drydart/model_viewer_plus.dart/tree/master/example
 repository: https://github.com/drydart/model_viewer_plus.dart
 issue_tracker: https://github.com/drydart/model_viewer_plus.dart/issues
@@ -10,13 +8,13 @@ dependencies:
     sdk: flutter
   model_viewer_plus:
     path: ../
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.18.0 <4.0.0"
 flutter:
   uses-material-design: true
   assets:
