--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,17 +1,16 @@
----
 name: CI
 on: push
 jobs:
   test:
     name: Run tests
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - name: Clone repository
-        uses: actions/checkout@v2.3.4
+        uses: actions/checkout@v3.5.3
       - name: Set up Flutter
-        uses: subosito/flutter-action@v1.4.0
+        uses: subosito/flutter-action@v2.10.0
         with:
-          flutter-version: '1.17.5'
+          channel: 'stable'
       - name: Install dependencies
         run: flutter pub get
       - name: Run the test suite
