--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -1,35 +1,22 @@
-# See: https://github.com/github/super-linter
----
 name: Linter
 on:
   push:
     branches: [master]
-    paths:
-      - '**.dart'
-      - '**.md'
-      - '**.yaml'
-      - '**.yml'
   pull_request:
     branches: [master]
-    paths:
-      - '**.dart'
-      - '**.md'
-      - '**.yaml'
-      - '**.yml'
+
 jobs:
   lint:
-    name: Lint code base
-    runs-on: ubuntu-18.04
+    name: "Lint code base"
+    runs-on: ubuntu-latest
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v2.3.4
-      - name: Lint Markdown and YAML files
-        uses: docker://github/super-linter:v3.3.2
-        env:
-          VALIDATE_MD: true
-          VALIDATE_YAML: true
-      - name: Lint Dart source code
-        uses: docker://github/super-linter:v3.3.2
-        env:
-          VALIDATE_DART: true
-          DISABLE_ERRORS: true  # FIXME
+      - uses: actions/checkout@v3.5.3
+      - uses: subosito/flutter-action@v2.10.0
+        with:
+          channel: 'stable'
+      - name: Install dependencies
+        run: flutter pub get
+      - name: Format
+        run: dart format --set-exit-if-changed -o none .
+      - name: Analyze
+        run: dart analyze
