--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,9 +1,4 @@
-# See: https://dart.dev/guides/language/analysis-options
----
-include: package:lints/recommended.yaml
+include: package:flutter_lints/flutter.yaml
 analyzer:
   exclude:
     - example/**.dart
-linter:
-  rules:
-    prefer_single_quotes: false
