--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   path: ^1.8.2
   url_launcher: ^6.1.11
   webview_flutter: ^4.2.2
+  webview_flutter_android: ^3.8.2
+  webview_flutter_wkwebview: ^3.6.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
