--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,6 @@
-include: package:flutter_lints/flutter.yaml
-analyzer:
-  exclude:
-    - example/**.dart
+include: package:carapacik_lints/core.yaml
+
+linter:
+  rules:
+    prefer_relative_imports: true
+    always_use_package_imports: false
