--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,29 +1,29 @@
 name: model_viewer_plus
-version: 1.5.1
-description: A Flutter widget for rendering interactive 3D models in the glTF and GLB formats.
-homepage: https://github.com/omchiii/model_viewer_plus.dart
+description: A Flutter widget for rendering interactive 3D models in the glTF and GLB formats
+version: 1.6.0
 repository: https://github.com/omchiii/model_viewer_plus.dart
-issue_tracker: https://github.com/omchiii/model_viewer_plus.dart/issues
-platforms:
-  android:
-  ios:
-  web:
+topics:
+  - model-viewer
+  - model
+environment:
+  sdk: ^3.0.0
+  flutter: '>=3.10.0'
+
 dependencies:
+  android_intent_plus: ^4.0.1
   flutter:
     sdk: flutter
-  android_intent_plus: ^4.0.1
-  path: ^1.8.2
-  url_launcher: ^6.1.11
+  path: ^1.8.3
+  url_launcher: ^6.1.12
   webview_flutter: ^4.2.2
-  webview_flutter_android: ^3.8.2
-  webview_flutter_wkwebview: ^3.6.3
+  webview_flutter_android: ^3.8.0
+  webview_flutter_wkwebview: ^3.6.0
+
 dev_dependencies:
+  carapacik_lints: ^1.4.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.2
-environment:
-  sdk: ">=2.18.0 <4.0.0"
-  flutter: ">=3.3.0"
+
 flutter:
   assets:
     - assets/
