--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,15 @@
 name: model_viewer_plus
 description: A Flutter widget for rendering interactive 3D models in the glTF and GLB formats
-version: 1.6.0
+version: 1.6.1
 repository: https://github.com/omchiii/model_viewer_plus.dart
 topics:
   - model-viewer
   - model
+platforms:
+  android:
+  ios:
+  macos:
+  web:
 environment:
   sdk: ^3.0.0
   flutter: '>=3.10.0'
