--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: model_viewer_plus
 description: "A Flutter widget for rendering interactive 3D models in the glTF and GLB formats"
-version: 1.8.0
+version: 1.8.1
 repository: https://github.com/omchiii/model_viewer_plus.dart
 topics:
   - model-viewer
@@ -18,8 +18,8 @@ dependencies:
   flutter:
     sdk: flutter
   path: ^1.9.0
-  url_launcher: ^6.2.6
-  web: ^0.5.1
+  url_launcher: ^6.2.1
+  web: '>=0.5.1 <2.0.0'
   webview_flutter: ^4.8.0
   webview_flutter_android: ^3.16.0
   webview_flutter_wkwebview: ^3.13.0
